# CurriculumOS

./: .gitignore  Makefile  README.md
backend/: .env.example  docker-compose.yml  pyproject.toml  seed_data.json  seed_db.py
backend/app/: main.py
backend/app/api/: activity.py  assessments.py  changes.py  courses.py  curriculum.py  debugger.py  files.py  projects.py  versions.py
backend/app/core/: config.py  dependencies.py
backend/app/database/: session.py
backend/app/models/: __init__.py  activity_event.py  assessment.py  course.py  curriculum_change.py  curriculum_version.py  learning_outcome.py  lesson.py  module.py  module_prerequisite.py  project.py
backend/app/schemas/: activity.py  assessment.py  change.py  course.py  curriculum.py  curriculum_change.py  learning_outcome.py  module.py  project.py  version.py
backend/app/services/: ai_change.py  ai_extraction.py  ai_gateway.py  curriculum.py  curriculum_operations.py  dependency_graph.py
backend/app/services/providers/: __init__.py  demo_provider.py  openai_provider.py  (+1 more)
backend/migrations/: env.py
backend/migrations/versions/: 04891b25a520_add_is_archived_to_projects_courses_.py  3e1c0ce729a2_add_assessments.py  43aac4d6442c_add_activity_events.py  67cf426e53be_add_curriculum_versions.py  b6d42e7f9a10_add_archive_flags.py  c8f31d5a7e24_add_module_prerequisites.py  d22d3417d77d_add_projects_table_and_link_courses.py  d2a64f8c1b30_merge_archive_and_prerequisites_heads.py  d95a5c496560_add_curriculum_versions.py  dfb4efe67736_add_module_prerequisite_edges.py  fc672702f2aa_initial_tables.py
(+39 files in other folders)
